Final corrected files

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Tracksaction</title>
   </head>
-  <body>
+  <body style="background-color: darkblue; color:white;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
